Fixed widget styles in web

--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -205,7 +205,7 @@ input[type=submit]{
     p { font-family:"Open Sans Italic"; font-size: 11px; color: #fff; padding-left: 20px; float: left; }
     li { font-family:"Open Sans Italic"; font-size: 11px; color: #646464; display: inline; }
     a { color: #646464; text-decoration: none; &:hover { text-decoration: underline; } }
-    .name { margin-left: 100px; }
+    .name { margin-left: 100px; margin-right: 10px; font-family:"Open Sans Italic"; font-size: 11px; color: #fff; padding-left: 20px; float: left; }
 }
 
 #info {
@@ -246,6 +246,8 @@ input[type=submit]{
 .c1 { color: #c74a53 !important; }
 .c2 { color: #e2ba00 !important; }
 .c3 { color: #acde5c !important; }
+
+#example-widget { width: 116px; margin: 0 auto; }
 
 .tooltip{
     border-radius: 5px;
@@ -421,7 +423,7 @@ form select {
     margin: 20px 0 0 20px;
 }
 
-.logos { float: left; height: 34px; overflow: hidden; margin: 5px 0 0 20px; }
+.logos { float: left; height: 34px; overflow: hidden; margin: 5px 0 0 100px; }
 
 
 // LOADING OVERLAY
