Moreinfo and about text with little changes

--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -14,7 +14,7 @@
         En la primera edición hicimos un prototipo funcional con diseño y datos parciales.</p>
         <p>En esta segunda edición hemos mejorado la carga de datos convirtiéndolo en un proceso rápido; gracias a esto, tenemos todos los datos disponibles.
         También publicamos la opción de incrustar un pequeño widget con un perfil en webs externas.</p>
-        <p>Y en el tintero nos dejamos mejorar las opciones de filtrado, optimizar las velocidades y lo que venga...</p>
+        <p>Y en el tintero nos dejamos algunas ideas que iremos incorporando poco a poco</a> 
         <p>Los que hemos desarrollado el proyecto:</p>
         <ul>
             <li>
