--- a/src/tasaparo/web/templates/moreinfo.html
+++ b/src/tasaparo/web/templates/moreinfo.html
@@ -11,14 +11,14 @@
         <h1>Más información</h1>
         <p>Cada tres meses el <a href="http://ine.es" target="_new">INE</a>
         publica los resultados de la Encuesta de Población Activa, EPA.
-        Estos resultados incluyen, entre otras cosas, información sobre
+        Estos resultados incluyen, entre otros datos, información sobre
         la tasa de paro.</p>
         <p>La nota de prensa que emite el INE, y que luego reproducen
         los medios, se centra en aquellos aspectos de la EPA más
         relevantes para la gestión de la economía. Sin embargo, esta
         información pasa por alto aspectos que nos importan a ti y a mí
         como ciudadanos concretos: ¿cómo está el mercado laboral para
-        aquellos que tienen nuestro perfil?</p>
+        aquellos que tienen perfiles como los nuestros?</p>
         <p>En Tu Tasa de Paro te damos esa información. Utilizamos los
         microdatos de la EPA, filtramos, agregamos y seleccionamos
         aquellas variables más relevantes para determinar cuál es
@@ -28,6 +28,6 @@
         provincias esta tasa es más favorable.</p>
     </div>
 </div>
-
+<br/><br/>
 
 {% endblock %}
