--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -24,7 +24,7 @@
             </li>
             <li>
                 <h3>JuanFran Alcántara</h3>
-                <a href="http://kaleidos.net/40826D/" target="_new">(Kaleidos)</a>
+                (<a href="http://kaleidos.net/40826D/" target="_new">Kaleidos</a>)
             </li>
             <li>
                 <h3>Eva Pérez</h3>
@@ -43,7 +43,7 @@
             <li>
                 <h3>Carlos Gil Bellosta</h3>
                 <a href="http://twitter.com/gilbellosta" target="_new">@gilbellosta</a>
-                <a href="http://www.datanalytics.com/" target="_new">(Data Analytics)</a>
+                (<a href="http://www.datanalytics.com/" target="_new">Data Analytics</a>)
             </li>
         </ul>
         <ul>
