--- a/src/tasaparo/web/static/css/widget.css
+++ b/src/tasaparo/web/static/css/widget.css
@@ -3,34 +3,67 @@
 
 div#kaleidos-tasaparo {
     width: 116px;
-    height:151px;
+    /*height:151px;*/
     margin: 10px;
+    padding: 20px 15px;
+    border: 1px solid #e3e3e3;
+    cursor: pointer;
+    border-radius: 4px;
 /*
     background: url('../images/bgheader.png') repeat-x;
 */
 }
 
-.txt {
-    font-size: 20px;
-    font-family:"Open Sans Italic";
-    padding-left : 20px;
-    width: 100%;
-    margin-top: 10px;
-    float: left;
-    cursor: pointer;
+.logo-link{
+    width: 88px;
+    margin: 0 auto;
+    display: block;
 }
+
+    .logo-link img{
+        width: 100%;
+    }
+
+.txt {
+    margin: 5px auto 0;
+    text-align: center;
+}
+
+    .txt a{
+        font-family:"Open Sans";
+        cursor: pointer;
+        font-size: 12px;
+        color: #7d7d7d;
+        font-weight: bold;
+        font-size: 14px;
+        padding: 8px 10px;
+        background: #e9e9e9;
+        background: -moz-linear-gradient(
+            top,
+            #e9e9e9 0%,
+            #dddddd);
+        background: -webkit-gradient(
+            linear, left top, left bottom, 
+            from(#e9e9e9),
+            to(#dddddd));
+        -moz-border-radius: 6px;
+        -webkit-border-radius: 6px;
+        border-radius: 6px;
+        border: 1px solid #d1d1d1;
+    }
 
 .result {
     width: 116px;
     height: 116px;
     border-radius: 58px;
     line-height: 116px;
-    font-size: 61px;
+    font-size: 53px;
     font-family: 'BreeSerif-Regular';
     color: #FFF;
     text-align: center;
-    float: left;
+    /*float: left;*/
     cursor: pointer;
+    margin: 10px 0 22px;;
 }
 
 .r1 { background-color: #c74a53;}
@@ -41,4 +74,5 @@ a {
     color: #646464;
     text-decoration: none;
 }
+
 
