--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -31,7 +31,7 @@
             <div id="footer">
                 <p>Tu tasa de Paro © 2013
                 <div class="logos">
-                    <a href="" target="_new"><span class="name">Carlos Gil Bellosta</span></a>
+                    <a href="http://www.datanalytics.com/" target="_new" class="name">Carlos Gil Bellosta</a>
                     <a href="http://kaleidos.net" target="_new"><img src="{% static 'images/logo_kaleidos.png' %}" ></a>
                     <a href="http://www.secuoyas.com" target="_new"><img src="{% static 'images/logo_secuoyas.png' %}" ></a>
                 </div>
