--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -272,7 +272,20 @@ input[type=submit]{
     -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);
 }
 #nav-results {
-    a { width: 142px; height: 53px; margin-bottom: 10px; font-family:"Open Sans"; display: block; color: #000; font-size: 14px; text-decoration: none; padding: 20px 0 0 200px; }
+    a { 
+        width: 142px; 
+        height: 53px; 
+        margin-bottom: 10px; 
+        font-family:"Open Sans"; 
+        display: block; 
+        color: #000; 
+        font-size: 14px; 
+        text-decoration: none; 
+        padding: 20px 0 0 200px;
+        &:hover{
+            color: #E17863;
+        } 
+    }
     position: absolute;
     top: 67px;
     right: 20px;
