--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="" type="image/x-icon" />
     <meta name="description" content="" />
-    <title>Tasa paro</title>
+    <title>TTparo.es</title>
 
     {% if debug %}
     <link type="text/less" rel="stylesheet/less" href="{% static 'css/styles.less' %}" />
