--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -29,7 +29,7 @@
                 {% block content %}{% endblock %}
             </div>
             <div id="footer">
-                <p>Tu tasa de Paro © 2013
+                <p>TTparo.es © 2013
                 <div class="logos">
                     <a href="http://www.datanalytics.com/" target="_new" class="name">Carlos Gil Bellosta</a>
                     <a href="http://kaleidos.net" target="_new"><img src="{% static 'images/logo_kaleidos.png' %}" ></a>
