--- a/src/tasaparo/web/templates/moreinfo.html
+++ b/src/tasaparo/web/templates/moreinfo.html
@@ -19,7 +19,7 @@
         información pasa por alto aspectos que nos importan a ti y a mí
         como ciudadanos concretos: ¿cómo está el mercado laboral para
         aquellos que tienen perfiles como los nuestros?</p>
-        <p>En Tu Tasa de Paro te damos esa información. Utilizamos los
+        <p>En TTparo.es te damos esa información. Utilizamos los
         microdatos de la EPA, filtramos, agregamos y seleccionamos
         aquellas variables más relevantes para determinar cuál es
         la tasa de paro que te afecta a ti, por tu perfil específico,
