Fixed difference between valid and invalid zeros

--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -239,6 +239,7 @@ input[type=submit]{
     .tm { font-size: 11px; font-family:"Open Sans Italic"; margin-bottom: 10px; text-align: center; width: 116px; color: #a1a1a1; }
 }
 
+.r0 { background-color: #f2f2f2; span { color: #858585; } }
 .r1 { background-color: #c74a53; span { color: #e4b4b6; } }
 .r2 { background-color: #e2ba00; span { color: #f7edcb; } }
 .r3 { background-color: #acde5c; span { color: #e8f5d7; } }
