--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -37,7 +37,7 @@
         {% if calculated_query %}
         <div id="result">
             <div id="actual"><span>Paro actual<br/> en España</span>{{general_rate.rate}}%</div>
-            <div id="resulparo" class="r{{calculated_query.compare_to_general.0}}">{{calculated_query.rate}}%<span>{{calculated_query.compare_to_general.1}}</span></div>
+            <div id="resulparo" class="r{{calculated_query.compare_to_general.0}}">{% if calculated_query.rate %}{{calculated_query.rate}}%{% else %}?{% endif %}<span>{{calculated_query.compare_to_general.1}}</span></div>
             <div id="nav-results">
                 <a class="link" href="{% url map query_hash %}" id="nav-map">Tu perfil<br/>en España</a>
                 <a class="link" href="{% url compare query_hash %}" id="nav-comp">Distribuciones</a>
