New type of "NO DATA"

--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -209,13 +209,12 @@ input[type=submit]{
 }
 
 #info {
-    width: 926px;
     float: left;
     border-top: 1px solid #dedede;
-    padding: 25px 37px 33px 55px;
+    padding: 25px 20px 33px 20px;
     h2 { font-size: 24px; font-family: 'BreeSerif-Regular'; width: 100%; padding-left: 24px; margin-bottom: 25px; }
     h3 { font-family:"Open Sans Semibold"; font-size: 14px; margin-bottom: 7px; text-transform: uppercase; }
-    .item { padding-left: 38px; width: 205px; float: left; margin-right: 65px; position: relative; }
+    .item { padding-left: 30px; width: 205px; float: left; margin-right: 5px; position: relative; }
     .ball { width: 22px; height: 28px; border-radius: 6px; position: absolute; left: 0; top: 0; }
     p, span { font-size: 12px; font-family:"Open Sans Light"; }
     span { color: #000; }
@@ -244,6 +243,7 @@ input[type=submit]{
 .r2 { background-color: #e2ba00; span { color: #f7edcb; } }
 .r3 { background-color: #acde5c; span { color: #e8f5d7; } }
 
+.c0 { color: #f2f2f2 !important; }
 .c1 { color: #c74a53 !important; }
 .c2 { color: #e2ba00 !important; }
 .c3 { color: #acde5c !important; }
