--- a/src/tasaparo/web/templates/info.html
+++ b/src/tasaparo/web/templates/info.html
@@ -14,4 +14,9 @@
             <h3>Tasa de paro BAJA</h3>
             <p>Bastante por debajo de la media española</p>
         </div>
+        <div class="item">
+            <div class="ball r0"></div>
+            <h3>Sin datos</h3>
+            <p>No hay datos para este perfil</p>
+        </div>
     </div>   
