--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -243,7 +243,7 @@ input[type=submit]{
 .r2 { background-color: #e2ba00; span { color: #f7edcb; } }
 .r3 { background-color: #acde5c; span { color: #e8f5d7; } }
 
-.c0 { color: #f2f2f2 !important; }
+.c0 { color: #000000 !important; }
 .c1 { color: #c74a53 !important; }
 .c2 { color: #e2ba00 !important; }
 .c3 { color: #acde5c !important; }
