Alex was jealous and I added him to about.html

--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -52,6 +52,11 @@
                 <a href="http://twitter.com/niwibe" target="_new">@niwibe</a>
         (<a href="http://kaleidos.net/A5694F/" target="_new">Kaleidos</a>)
             </li>
+            <li>
+                <h3>Alejandro Alonso</h3>
+                <a href="http://twitter.com/_superalex_" target="_new">@_superalex_</a>
+                (<a href="http://kaleidos.net/FC8EAC/" target="_new">Kaleidos</a>)
+               </li>
         </ul>
     </div>
 </div>
