Xaviju was as jealous as Alex and I added him to about.html

--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -56,7 +56,12 @@
                 <h3>Alejandro Alonso</h3>
                 <a href="http://twitter.com/_superalex_" target="_new">@_superalex_</a>
                 (<a href="http://kaleidos.net/FC8EAC/" target="_new">Kaleidos</a>)
-               </li>
+           </li>
+            <li>
+                <h3>Xavier Julián</h3>
+                <a href="http://twitter.com/Xaviju" target="_new">@Xaviju</a>
+                (<a href="http://kaleidos.net/CC0000/" target="_new">Kaleidos</a>)
+           </li>
         </ul>
     </div>
 </div>
