Better explanation on colours

--- a/src/tasaparo/web/templates/moreinfo.html
+++ b/src/tasaparo/web/templates/moreinfo.html
@@ -26,6 +26,17 @@
         y te proporcionamos herramientas para que veas cómo ha
         evolucionado este perfil a través del tiempo y en qué
         provincias esta tasa es más favorable.</p>
+        <p>Hemos usado un código de colores para distinguir en tres
+        grandes franjas:</p>
+        <ul>
+            <li><span class="c3">Verde</span>: si un perfil es verde, significa que su tasa está, al menos, un
+            20% por debajo de la media nacional</li>
+            <li><span class="c2">Naranja</span>: si un perfil es naranja, significa que su tasa
+            en torno a la media nacional (+/- 20%)</li>
+            <li><span class="c1">Rojo</span>: si un perfil es rojo, significa que su tasa está, al menos, un
+            20% por encima de la media nacional</li>
+        </ul>
+        <p> Aparte, el color gris indica que no se han recogido datos relativos a ese perfil.</p>
     </div>
 </div>
 <br/><br/>
