--- a/src/tasaparo/web/static/css/widget.css
+++ b/src/tasaparo/web/static/css/widget.css
@@ -20,37 +20,37 @@ div#kaleidos-tasaparo {
     display: block;
 }
 
-.ttdp-logo-link img{
-    width: 100%;
-}
+    .ttdp-logo-link img{
+        width: 100%;
+    }
 
 .ttdp-txt {
     margin: 5px auto 0;
     text-align: center;
 }
 
-.ttdp-txt a{
-    font-family:"Open Sans";
-    cursor: pointer;
-    font-size: 12px;
-    color: #7d7d7d;
-    font-weight: bold;
-    font-size: 14px;
-    padding: 8px 10px;
-    background: #e9e9e9;
-    background: -moz-linear-gradient(
-        top,
-        #e9e9e9 0%,
-        #dddddd);
-    background: -webkit-gradient(
-        linear, left top, left bottom, 
-        from(#e9e9e9),
-        to(#dddddd));
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    border-radius: 6px;
-    border: 1px solid #d1d1d1;
-}
+    .ttdp-txt a{
+        font-family:"Open Sans";
+        cursor: pointer;
+        font-size: 12px;
+        color: #7d7d7d;
+        font-weight: bold;
+        font-size: 14px;
+        padding: 8px 10px;
+        background: #e9e9e9;
+        background: -moz-linear-gradient(
+            top,
+            #e9e9e9 0%,
+            #dddddd);
+        background: -webkit-gradient(
+            linear, left top, left bottom, 
+            from(#e9e9e9),
+            to(#dddddd));
+        -moz-border-radius: 6px;
+        -webkit-border-radius: 6px;
+        border-radius: 6px;
+        border: 1px solid #d1d1d1;
+    }
 
 .ttdp-result {
     width: 116px;
@@ -70,7 +70,7 @@ div#kaleidos-tasaparo {
 .ttdp-r2 { background-color: #e2ba00;}
 .ttdp-r3 { background-color: #acde5c;}
 
-.ttdp-a a {
+.ttdp-moreinfo a {
     color: #646464;
     text-decoration: none;
 }
