--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -9,7 +9,7 @@
 
     {% if debug %}
     <link type="text/less" rel="stylesheet/less" href="{% static 'css/styles.less' %}" />
-    <script src="{% static 'js/libs/less-1.3.1.min.js' %}"></script>
+    <script src="{% static 'js/libs/less-1.3.1.js' %}"></script>
     {% else %}
     <link type="text/css" rel="stylesheet" href="{% static 'css/styles.css' %}" />
     {% endif %}
@@ -53,17 +53,7 @@
         </div>
     </script>
 
-    {% comment %}
     <script src="{% static 'js/main.min.js' %}"></script>
-    {% endcomment %}
-
-    <script src="{% static 'js/libs/json2.js' %}"></script>
-    <script src="{% static 'js/libs/jquery-1.8.3.min.js' %}"></script>
-    <script src="{% static 'js/libs/raphael-min.js' %}"></script>
-    <script src="{% static 'js/libs/tooltip.js' %}"></script>
-    <script src="{% static 'js/libs/elycharts.min.js' %}"></script>
-    <script src="{% static 'js/libs/underscore-min.js' %}"></script>
-    <script src="{% static 'js/libs/backbone-min.js' %}"></script>
 
     {% if debug %}
     <script src="{% static 'js/tasaparo.js' %}"></script>
