Fixed minor typos

--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -17,7 +17,7 @@
                 {{form.province}}
             </div>
             <div class="field">
-                <label>Género</label>
+                <label>Sexo</label>
                 {{form.sex}}
             </div>
             <div class="field">
