--- a/src/tasaparo/web/templates/moreinfo.html
+++ b/src/tasaparo/web/templates/moreinfo.html
@@ -32,7 +32,7 @@
             <li><span class="c3">Verde</span>: si un perfil es verde, significa que su tasa está, al menos, un
             20% por debajo de la media nacional</li>
             <li><span class="c2">Naranja</span>: si un perfil es naranja, significa que su tasa
-            en torno a la media nacional (+/- 20%)</li>
+            está en torno a la media nacional (+/- 20%)</li>
             <li><span class="c1">Rojo</span>: si un perfil es rojo, significa que su tasa está, al menos, un
             20% por encima de la media nacional</li>
         </ul>
