--- a/src/tasaparo/web/templates/recalculate-form.html
+++ b/src/tasaparo/web/templates/recalculate-form.html
@@ -4,7 +4,7 @@
         {{form.province}}
     </div>
     <div class="field">
-        <label>Género</label>
+        <label>Sexo</label>
         {{form.sex}}
     </div>
     <div class="field">
