--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -48,7 +48,7 @@
 
     <script type="text/template" id="result-empty-template">
         <div id="result">
-            <div id="actual"><span>Paro actual<br/> en España</span>{{general_rate.rate}}%</div>
+            <div id="actual"><span>Paro actual<br/> en España</span>{{general_rate.frate}}%</div>
             <div id="resulparo" class="r1 question"><span>tu tasa</span>?</div>
         </div>
     </script>
