--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -52,7 +52,7 @@
         <div id="resulparo" class="r1 question"><span>tu tasa</span>?</div>
         {% endif %}
     </div>
-    <p class="last-update">Última actualización: <a href="http://www.ine.es/jaxi/menu.do?type=pcaxis&path=/t22/e308_mnu&file=inebase&N=&L=0" title="Encuesta de población activa">EPA 25/04/2013<a></p>
+    <p class="last-update">Última actualización: <a href="{{ EPA_URL }}" title="Encuesta de población activa">EPA {{ EPA_DATE }}<a></p>
     {% include "info.html" %}
     <div id="last">
         <h2>Últimas consultas</h2>
