Fixed bugs in Xavi's pull request

--- a/src/tasaparo/web/templates/home.html
+++ b/src/tasaparo/web/templates/home.html
@@ -52,7 +52,7 @@
         <div id="resulparo" class="r1 question"><span>tu tasa</span>?</div>
         {% endif %}
     </div>
-    <p class="last-update">Última actualización: <a href="{{ EPA_URL }}" title="Encuesta de población activa">EPA {{ EPA_DATE }}<a></p>
+    <p class="last-update">Última actualización: <a href="{{ EPA_URL }}" title="Encuesta de población activa" target="_blank">EPA {{ EPA_DATE }}<a></p>
     {% include "info.html" %}
     <div id="last">
         <h2>Últimas consultas</h2>
