--- a/src/tasaparo/web/templates/layout.html
+++ b/src/tasaparo/web/templates/layout.html
@@ -9,7 +9,7 @@
 
     {% if debug %}
     <link type="text/less" rel="stylesheet/less" href="{% static 'css/styles.less' %}" />
-    <script src="{% static 'js/libs/less-1.3.1.js' %}"></script>
+    <script src="{% static 'js/libs/less.js' %}"></script>
     {% else %}
     <link type="text/css" rel="stylesheet" href="{% static 'css/styles.css' %}" />
     {% endif %}
