--- a/src/tasaparo/web/static/css/styles.less
+++ b/src/tasaparo/web/static/css/styles.less
@@ -241,9 +241,8 @@ input[type=submit]{
     width: 204px;
     padding-left: 24px;
     float: left;
-    cursor: pointer;
     .txt { font-size: 11px; font-family:"Open Sans Italic"; width: 100%; float: left; margin-top: 19px; }
-    .result { width: 116px; height: 116px; border-radius: 58px; line-height: 116px; font-size: 61px; font-family: 'BreeSerif-Regular'; color: #FFF; text-align: center; float: left; cursor: pointer; }
+    .result { width: 116px; height: 116px; border-radius: 58px; line-height: 116px; font-size: 61px; font-family: 'BreeSerif-Regular'; color: #FFF; text-align: center; float: left; }
     .tm { font-size: 11px; font-family:"Open Sans Italic"; margin-bottom: 10px; text-align: center; width: 116px; color: #a1a1a1; }
 }
 
@@ -282,19 +281,19 @@ input[type=submit]{
     -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg);
 }
 #nav-results {
-    a { 
-        width: 142px; 
-        height: 53px; 
-        margin-bottom: 10px; 
-        font-family:"Open Sans"; 
-        display: block; 
-        color: #000; 
-        font-size: 14px; 
-        text-decoration: none; 
+    a {
+        width: 142px;
+        height: 53px;
+        margin-bottom: 10px;
+        font-family:"Open Sans";
+        display: block;
+        color: #000;
+        font-size: 14px;
+        text-decoration: none;
         padding: 20px 0 0 200px;
         &:hover{
             color: #E17863;
-        } 
+        }
     }
     position: absolute;
     top: 67px;
