--- a/src/tasaparo/web/templates/about.html
+++ b/src/tasaparo/web/templates/about.html
@@ -9,12 +9,12 @@
 <div id="home-view">
     <div id="info-ttdp">
         <h1>Quiénes somos</h1>
-        <p>TTparo.es es un proyecto desarrollado en el marco de la <a href="http://piweek.es" target="_new">PiWeek</a>
+        <p>TTparo.es es un proyecto desarrollado en el marco de la <a href="http://piweek.com" target="_new">PiWeek</a>
     de <a href="http://kaleidos.net" target="_new">Kaleidos</a>.
         En la primera edición hicimos un prototipo funcional con diseño y datos parciales.</p>
         <p>En esta segunda edición hemos mejorado la carga de datos convirtiéndolo en un proceso rápido; gracias a esto, tenemos todos los datos disponibles.
         También publicamos la opción de incrustar un pequeño widget con un perfil en webs externas.</p>
-        <p>Y en el tintero nos dejamos algunas ideas que iremos incorporando poco a poco</a> 
+        <p>Y en el tintero nos dejamos algunas ideas que iremos incorporando poco a poco</a>
         <p>Los que hemos desarrollado el proyecto:</p>
         <ul>
             <li>
